// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extracts docs 1`] = `
Object {
  "hybrids": Array [],
  "length": 1,
  "terms": Array [
    Object {
      "jsDoc": null,
      "kind": "variable",
      "languageLevel": "term",
      "name": "a",
      "sourceLocation": Object {
        "fileLine": 1,
        "filePath": "/a.ts",
      },
      "text": "a = 1",
      "textWithJSDoc": "a = 1",
      "type": Object {
        "name": "1",
      },
    },
  ],
  "typeIndex": Object {},
  "types": Array [],
}
`;

exports[`jsdoc extracts doc from a variable statement 1`] = `
Object {
  "source": "primary",
}
`;

exports[`jsdoc splits multiple jsDoc blocks by primary and additional (closest to code is primary) 1`] = `
Object {
  "additional": Array [
    Object {
      "source": "additional 2",
    },
    Object {
      "source": "additional 1",
    },
  ],
  "primary": Object {
    "source": "primary",
  },
}
`;

exports[`jsdoc whitespace and comments between multiple jsDoc blocks are ignored 1`] = `
Object {
  "additional": Array [
    Object {
      "source": "additional 2",
    },
    Object {
      "source": "additional 1",
    },
  ],
  "primary": Object {
    "source": "primary",
  },
}
`;

exports[`variable objects documents an object if the variable points to an object 1`] = `
Object {
  "hybrids": Array [],
  "length": 2,
  "terms": Array [
    Object {
      "jsDoc": null,
      "kind": "object",
      "languageLevel": "term",
      "name": "foo",
      "properties": Array [
        Object {
          "name": "a",
          "type": Object {
            "name": "string",
          },
        },
      ],
      "sourceLocation": Object {
        "fileLine": 1,
        "filePath": "/a.ts",
      },
      "text": "{ a: \\"\\" }",
      "textWithJSDoc": " { a: \\"\\" }",
    },
    Object {
      "jsDoc": null,
      "kind": "object",
      "languageLevel": "term",
      "name": "bar",
      "properties": Array [
        Object {
          "name": "a",
          "type": Object {
            "name": "\\"flip\\"",
          },
        },
      ],
      "sourceLocation": Object {
        "fileLine": 2,
        "filePath": "/a.ts",
      },
      "text": "{ a: \\"flip\\" }",
      "textWithJSDoc": " { a: \\"flip\\" }",
    },
  ],
  "typeIndex": Object {},
  "types": Array [],
}
`;
